--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,6 +13,8 @@ spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.data.jpa.repositories.enabled=true
-
+#JWT
+jwt.secretKey=vndreamers
+jwt.expireTime=86400000
 
 
